--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Туристический сайт</title>
-    <link rel="stylesheet" href="styyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="page-header">
@@ -152,7 +152,7 @@
     <div class="massage"> <img src="img/вк.png" alt="иконка вконтакте">
           <img src="img/тг.png" alt="иконка телеграма"></div>
    </footer>
-   <script src="scriipts.js"> </script>
+   <script src="scripts.js"> </script>
 </body>
 </html>
  
